# Blue-Burst-Patch-Project

./: .gitignore  Blue Burst Patch Project.sln  CMakeLists-mingw.txt  CMakeLists.txt  LICENSE  PSOBB Lib.sln  README.md  psobb.bbpp.7z  wine-build.sh
Blue Burst Patch Project/: Blue Burst Patch Project.vcxproj  Blue Burst Patch Project.vcxproj.filters  CMakeLists.txt  battleparam.cpp  battleparam.h  common.cpp  common.h  customize_menu.cpp  customize_menu.h  devmod_interface.h  dllmain.cpp  earlywalk.cpp  earlywalk.h  editors.cpp  editors.h  enemy.cpp  enemy.h  enemy_spawns.cpp  enemy_spawns.h  entity.cpp  entity.h  entitylist.cpp  entitylist.h  fastwarp.cpp  fastwarp.h  framework.h  globals.h  helpers.cpp  helpers.h  hooking.cpp  hooking.h  ime.cpp  ime.h  initlist.cpp  initlist.h  keyboard.cpp  keyboard.h  keyboard_shortcuts.cpp  keyboard_shortcuts.h  large_assets.cpp  (+39 more)
Blue Burst Patch Project/devmod/: map_object_turret.cpp  map_object_turret.h
Blue Burst Patch Project/editors/: TCameraEditor.cpp  TFreeCamera.cpp  TGroupEnemySetEditor.cpp  TGroupSetEditor.cpp  TParticleEditor.cpp  TQuestScriptChecker.cpp  TSetEvtScriptTest.cpp
Blue Burst Patch Project/newgfx/: animation.cpp  animation.h  bone.cpp  bone.h  mesh.cpp  mesh.h  model.cpp  model.h
Blue Burst Patch Project/newmap/: enemies_and_objects.cpp  enemies_and_objects.h  enemy_icecube.cpp  enemy_icecube.h  fog.cpp  fog.h  footsteps.cpp  footsteps.h  map_object_cloud.cpp  map_object_cloud.h  map_object_newdoor.cpp  map_object_newdoor.h  map_object_payload.cpp  map_object_payload.h  map_object_slippery.cpp  map_object_slippery.h  map_object_snowfall.cpp  map_object_snowfall.h  map_object_snowwisp.cpp  map_object_snowwisp.h  map_object_turret.cpp  map_object_turret.h  maploader.cpp  maploader.h  newmap.cpp  newmap.h  particle_effects.cpp  particle_effects.h  setdata.cpp  setdata.h  slbgm.cpp  slbgm.h  snow_map.cpp  snow_map.h  sound_effects.cpp  sound_effects.h  sunlight.cpp  sunlight.h
PSOBB Lib/: PSOBB Lib.vcxproj  PSOBB Lib.vcxproj.filters  dllmain.cpp  globals.h  pch.h
assets/: fox.glb
include/IL/: DevIL.i  build-lua  build-python  devil_cpp_wrapper.hpp  devil_internal_exports.h  il.h  ilu.h  ilut.h  luadevil.c
include/assimp/: irrXMLWrapper.h
lib/: assimp-vc142-mt.lib  zlibstatic.lib
